data/collection/fixes/descriptions/kotlin/KT-8114
{code}
open class A {
    fun foo() {
        if (this is B) {
            "".bar()
        }
    }
}

class B : A() {
    fun String.bar() {
    }
}
{code}

{code}
1.kt:4:16: error: unresolved reference: bar
            "".bar()
               ^
{code}
